@@ -1,7 +1,14 @@
-FROM eclipse-temurin:21-jre-alpine
-
+FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
 
-COPY target/Dispatcher_notification-1.0-SNAPSHOT.jar app.jar
+FROM eclipse-temurin:21-jre-alpine
+WORKDIR /app
+COPY --from=build /app/target/dispatcher-notification-1.0-SNAPSHOT.jar app.jar
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java",
+    "-XX:MaxRAMPercentage=75.0",
+    "-XX:+UseG1GC",
+    "-Xlog:gc*:stdout:time,level,tags",
+    "-jar", "app.jar"]
